Presentation module ongoing

--- a/app/src/main/res/layout/activity_character.xml
+++ b/app/src/main/res/layout/activity_character.xml
@@ -67,7 +67,7 @@
                 android:text="@string/label_stories"/>
 
             <com.google.android.material.button.MaterialButton
-                android:id="@+id/btn_events"
+                android:id="@+id/btn_series"
                 android:layout_width="0dp"
                 android:layout_weight="1"
                 android:layout_height="wrap_content"
