--- a/app/src/main/res/layout/activity_event.xml
+++ b/app/src/main/res/layout/activity_event.xml
@@ -74,7 +74,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="8dp"
                 android:layout_weight="1"
-                android:text="@string/label_events"
+                android:text="@string/label_series"
                 app:shapeAppearance="@style/AppTheme.ButtonShape" />
 
             <com.google.android.material.button.MaterialButton
@@ -149,14 +149,6 @@
                         android:orientation="horizontal">
 
                         <TextView
-                            android:id="@+id/text_format"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:textAppearance="?attr/textAppearanceBody2"
-                            android:textStyle="bold"
-                            tools:text="Format" />
-
-                        <TextView
                             android:id="@+id/text_id"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
@@ -185,20 +177,20 @@
                         android:textAppearance="?attr/textAppearanceHeadline6" />
 
                     <TextView
+                        android:id="@+id/text_dates"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="8dp"
+                        android:textAppearance="?attr/textAppearanceBody2"
+                        tools:text="Start to End" />
+
+                    <TextView
                         android:id="@+id/text_description"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="8dp"
                         android:textAppearance="?attr/textAppearanceBody1"
                         tools:text="Description" />
-
-                    <TextView
-                        android:id="@+id/text_dates"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="8dp"
-                        android:textAppearance="?attr/textAppearanceBody1"
-                        tools:text="Variant Description" />
 
                     <ci.slyest.the.marvel.verse.presentation.custom.AutoHeightGridView
                         android:id="@+id/grid_creators"
