--- a/app/src/main/res/layout/activity_comic.xml
+++ b/app/src/main/res/layout/activity_comic.xml
@@ -149,7 +149,7 @@
                         android:orientation="horizontal">
 
                         <TextView
-                            android:id="@+id/text_format"
+                            android:id="@+id/text_rating"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:textAppearance="?attr/textAppearanceBody2"
