--- a/app/src/main/res/layout/activity_series.xml
+++ b/app/src/main/res/layout/activity_series.xml
@@ -58,6 +58,16 @@
                 app:shapeAppearance="@style/AppTheme.ButtonShape" />
 
             <com.google.android.material.button.MaterialButton
+                android:id="@+id/btn_comics"
+                style="@style/AppTheme.DetailsButton"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="8dp"
+                android:layout_weight="1"
+                android:text="@string/label_comics"
+                app:shapeAppearance="@style/AppTheme.ButtonShape" />
+
+            <com.google.android.material.button.MaterialButton
                 android:id="@+id/btn_stories"
                 style="@style/AppTheme.DetailsButton"
                 android:layout_width="0dp"
@@ -68,22 +78,12 @@
                 app:shapeAppearance="@style/AppTheme.ButtonShape" />
 
             <com.google.android.material.button.MaterialButton
-                android:id="@+id/btn_series"
+                android:id="@+id/btn_events"
                 style="@style/AppTheme.DetailsButton"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginEnd="8dp"
                 android:layout_weight="1"
                 android:text="@string/label_events"
-                app:shapeAppearance="@style/AppTheme.ButtonShape" />
-
-            <com.google.android.material.button.MaterialButton
-                android:id="@+id/btn_creators"
-                style="@style/AppTheme.DetailsButton"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="@string/label_creators"
                 app:shapeAppearance="@style/AppTheme.ButtonShape" />
         </LinearLayout>
 
